usb: device_next: add CP210x USB class implementation
Add CP210x USB class implementation.
CP210x is the USB to serial converter, wildly used to emulate serial
devices in MCUs and supported by major operating systems. It has the
advantage over CDC ACM of using only two USB endpoints. This makes the
dramatic difference in some cases: for example, STM32F40x boards may
emulate three CP210x instances but only one CDC ACM instance.
USB device implementation heavily borrows from CDC ACM code, and for the
most part differs in control message handling.

Only a subset of functions is currently implemented. Missing functionality
includes
* most flow control functions;
* error reporting;
* special character handling.

Implementation has a known problem: when device only sends data (e.g. usb
console sample), closing the terminal emulation program (i.e. screen or
picocom) hangs the process.

Signed-off-by: Sergey Matsievskiy <matsievskiysv@gmail.com>

--- a/subsys/usb/device_next/CMakeLists.txt
+++ b/subsys/usb/device_next/CMakeLists.txt
@@ -99,6 +99,11 @@ zephyr_library_sources_ifdef(
   class/usbd_dfu_flash.c
 )
 
+zephyr_library_sources_ifdef(
+	CONFIG_USBD_CP210X_CLASS
+	class/usbd_cp210x.c
+)
+
 zephyr_linker_sources_ifdef(
   CONFIG_USBD_DFU
   SECTIONS class/usbd_dfu.ld
