drivers: leds_strip: rename modulino smartleds to pixels
Rename the modulino pixels driver to use the official marketing name,
the "smartleds" one was picked incorrectly from the source code of the
on board mcu of the module itself, but that was clearly out of date.

Signed-off-by: Fabio Baltieri <fabiobaltieri@google.com>

--- a/dts/bindings/led_strip/arduino,modulino-pixels.yaml
+++ b/dts/bindings/led_strip/arduino,modulino-pixels.yaml
@@ -1,9 +1,9 @@
 # Copyright (c) 2025 Google, LLC
 # SPDX-License-Identifier: Apache-2.0
 
-description: Arduino Modulino smart LEDs
+description: Arduino Modulino Pixels
 
-compatible: "arduino,modulino-smartleds"
+compatible: "arduino,modulino-pixels"
 
 include: [led-strip.yaml, i2c-device.yaml]
 
