dts: arm: st: u0: Move HSI48 to USB capable STM32U0 family
HSI48 is not available on all families, only on those where USB is present.

Signed-off-by: Adam BERLINGER <adam.berlinger@st.com>

--- a/dts/arm/st/u0/stm32u073.dtsi
+++ b/dts/arm/st/u0/stm32u073.dtsi
@@ -62,6 +62,15 @@
 		};
 	};
 
+	clocks {
+		clk_hsi48: clk-hsi48 {
+			#clock-cells = <0>;
+			compatible = "st,stm32-hsi48-clock";
+			clock-frequency = <DT_FREQ_M(48)>;
+			status = "disabled";
+		};
+	};
+
 	sram1: memory@20000000 {
 		compatible = "zephyr,memory-region", "mmio-sram";
 		zephyr,memory-region = "SRAM1";
