modem: cellular: baudrate update from devicetree
Move baudrate updates from a global kconfig to a devicetree property.

Signed-off-by: Jordan Yates <jordan@embeint.com>

--- a/dts/bindings/modem/u-blox,lara-r6.yaml
+++ b/dts/bindings/modem/u-blox,lara-r6.yaml
@@ -11,3 +11,10 @@ properties:
   mdm-power-gpios:
     type: phandle-array
     required: true
+
+  target-speed:
+    type: int
+    default: 3000000
+    description:
+      UART baudrate which will be requested using AT commands and to which
+      UART interface will be reconfigured during initialization phase.
