ci: doc-build: build full docs on push, drop cron
Building the full docs every 3 hours is not really the best approach
given we end up building "for nothing" when things are quiet, and on the
other hand introduce a 3-hours-at-most delay for changes to be reflected
on the public docs after a merge/push.
Therefore, drop cron and do the full build on every push to main.

Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/.github/workflows/doc-build.yml
+++ b/.github/workflows/doc-build.yml
@@ -4,11 +4,10 @@
 name: Documentation Build
 
 on:
-  schedule:
-  - cron: '0 */3 * * *'
   push:
     tags:
     - v*
+    - main
   pull_request:
 
 permissions:
