scripts: move set_assignee.py into scripts/ci
Scripts only used by CI, so move it into that directory.

Signed-off-by: Anas Nashif <anas.nashif@intel.com>

--- a/.github/workflows/assigner.yml
+++ b/.github/workflows/assigner.yml
@@ -72,7 +72,7 @@ jobs:
           echo "Unknown event: ${{ github.event_name }}"
           exit 1
         fi
-        python3 scripts/set_assignees.py $FLAGS
+        python3 scripts/ci/set_assignees.py $FLAGS
 
     - name: Check maintainer file changes
       if: >
