--- a/samples/subsys/mgmt/hawkbit/sample.yaml
+++ b/samples/subsys/mgmt/hawkbit/sample.yaml
@@ -6,10 +6,10 @@ common:
   build_only: true
   platform_allow:
     - frdm_k64f
-    - stm32h573i_dk
+    - stm32h573i_dk/stm32h573xx/ext_flash_app
   integration_platforms:
     - frdm_k64f
-    - stm32h573i_dk
+    - stm32h573i_dk/stm32h573xx/ext_flash_app
 sample:
   description: hawkBit Firmware Over-the-Air (FOTA)
   name: hawkbit
