--- a/west.yml
+++ b/west.yml
@@ -23,6 +23,8 @@ manifest:
       url-base: https://github.com/zephyrproject-rtos
     - name: babblesim
       url-base: https://github.com/BabbleSim
+    - name: mcuboot_upstream
+      url-base: https://github.com/mcu-tools
 
   group-filter: [-babblesim, -optional]
 
@@ -321,7 +323,8 @@ manifest:
       groups:
         - crypto
     - name: mcuboot
-      revision: 48b0f6da9af8d009eb8eafba023998a7d85320a1
+      remote: mcuboot_upstream
+      revision: pull/2500/head
       path: bootloader/mcuboot
       groups:
         - bootloader
