--- a/samples/sysbuild/with_mcuboot/sample.yaml
+++ b/samples/sysbuild/with_mcuboot/sample.yaml
@@ -17,7 +17,7 @@ tests:
       - nucleo_h7s3l8
       - nucleo_u385rg_q
       - stm32h7s78_dk
-      - stm32h573i_dk
+      - stm32h573i_dk/stm32h573xx/ext_flash_app
     integration_platforms:
       - nrf52840dk/nrf52840
       - esp32_devkitc/esp32/procpu
