lib: move cpu_load into lib/os
Move cpu_load to lib/os, as this functionality on its own does not
justify being a subsystem on its own.

Fixes #95498

Signed-off-by: Anas Nashif <anas.nashif@intel.com>

--- a/lib/os/cpu_load/Kconfig
+++ b/lib/os/cpu_load/Kconfig
@@ -3,14 +3,14 @@
 # SPDX-License-Identifier: Apache-2.0
 
 menuconfig CPU_LOAD_METRIC
-	bool "CPU Load Subsystem"
+	bool "CPU Load Metric"
 	select EXPERIMENTAL
 	select THREAD_RUNTIME_STATS
 	select SCHED_THREAD_USAGE
 	select SCHED_THREAD_USAGE_ALL
 	select SCHED_THREAD_USAGE_AUTO_ENABLE
 	help
-	  CPU Load subsystem
+	  Tracking of CPU load statistics.
 
 if CPU_LOAD_METRIC
 
