--- a/soc/silabs/silabs_s2/xg21/Kconfig
+++ b/soc/silabs/silabs_s2/xg21/Kconfig
@@ -3,6 +3,8 @@
 
 config SOC_SILABS_XG21
 	select ARM
+	select ARM_TRUSTZONE_M
+	select ARMV8_M_DSP
 	select CPU_CORTEX_M_HAS_DWT
 	select CPU_CORTEX_M33
 	select CPU_HAS_ARM_MPU
@@ -11,9 +13,9 @@ config SOC_SILABS_XG21
 	select HAS_PM
 	select HAS_SWO
 	select SILABS_SISDK_CLOCK_MANAGER
+	select SILABS_SISDK_CORE
 	select SILABS_SISDK_DEVICE_INIT
-	select SOC_GECKO_EMU
-	select SOC_GECKO_GPIO
+	select SILABS_SISDK_GPIO
 
 config SOC_SERIES_EFR32MG21
 	select SOC_GECKO_HAS_RADIO
