--- a/soc/silabs/silabs_s2/xg29/Kconfig
+++ b/soc/silabs/silabs_s2/xg29/Kconfig
@@ -13,9 +13,9 @@ config SOC_SILABS_XG29
 	select HAS_PM
 	select HAS_SWO
 	select SILABS_SISDK_CLOCK_MANAGER
+	select SILABS_SISDK_CORE
 	select SILABS_SISDK_DEVICE_INIT
-	select SOC_GECKO_EMU
-	select SOC_GECKO_GPIO
+	select SILABS_SISDK_GPIO
 
 config SOC_SERIES_EFR32BG29
 	select SOC_GECKO_HAS_RADIO
