--- a/modules/hal_silabs/simplicity_sdk/Kconfig
+++ b/modules/hal_silabs/simplicity_sdk/Kconfig
@@ -4,11 +4,25 @@
 menu "SiSDK configuration"
 	depends on HAS_SILABS_SISDK
 
+# Peripherals
+
+config SILABS_SISDK_ACMP
+	bool "Peripheral HAL for ACMP"
+
+config SILABS_SISDK_BURTC
+	bool "Peripheral HAL for BURTC"
+
+config SILABS_SISDK_CORE
+	bool "Peripheral HAL for CORE"
+
+config SILABS_SISDK_EMU
+	bool "Peripheral HAL for EMU"
+
+config SILABS_SISDK_EUSART
+	bool "Peripheral HAL for EUSART"
+
 config SILABS_SISDK_GPIO
 	bool "Peripheral HAL for GPIO"
-
-config SILABS_SISDK_SYSTEM
-	bool "Peripheral HAL for SYSTEM (device info)"
 
 config SILABS_SISDK_I2C
 	bool "Peripheral HAL for I2C"
@@ -17,17 +31,41 @@ config SILABS_SISDK_IADC
 	bool "Peripheral HAL for IADC"
 	select SILABS_SISDK_SYSTEM
 
+config SILABS_SISDK_LDMA
+	bool "Peripheral HAL for LDMA"
+
 config SILABS_SISDK_LETIMER
 	bool "Peripheral HAL for LETIMER"
+
+config SILABS_SISDK_MSC
+	bool "Peripheral HAL for MSC"
+
+config SILABS_SISDK_PRS
+	bool "Peripheral HAL for PRS"
+
+config SILABS_SISDK_RMU
+	bool "Peripheral HAL for RMU"
+
+config SILABS_SISDK_RTCC
+	bool "Peripheral HAL for RTCC"
 
 config SILABS_SISDK_SE
 	bool "Peripheral HAL for SE (Secure Engine)"
 
+config SILABS_SISDK_SYSTEM
+	bool "Peripheral HAL for SYSTEM (device info)"
+
 config SILABS_SISDK_TIMER
 	bool "Peripheral HAL for TIMER"
 
+config SILABS_SISDK_USART
+	bool "Peripheral HAL for USART"
+
 config SILABS_SISDK_VDAC
 	bool "Peripheral HAL for VDAC"
+
+config SILABS_SISDK_WDOG
+	bool "Peripheral HAL for WDOG"
 
 # Utilities
 
@@ -43,7 +81,7 @@ config SILABS_SISDK_CLOCK_MANAGER
 
 config SILABS_SISDK_DEVICE_INIT
 	bool "Device Init service"
-	select SOC_GECKO_EMU
+	select SILABS_SISDK_EMU
 	help
 	  Use the device initialization routines from the device_init service
 	  in Silicon Labs HAL.
@@ -55,15 +93,15 @@ config SILABS_SISDK_HFXO_MANAGER
 
 config SILABS_SISDK_POWER_MANAGER
 	bool "Power Manager service"
-	select SOC_GECKO_EMU
+	select SILABS_SISDK_EMU
 	select SILABS_SISDK_SLIST
 	help
 	  Set if the Power Manager HAL module is used.
 
 config SILABS_SISDK_SLEEPTIMER
-	bool
-	select SOC_GECKO_PRS
-	select SOC_GECKO_RTCC if $(dt_nodelabel_enabled,rtcc0)
+	bool "Sleeptimer service"
+	select SILABS_SISDK_PRS
+	select SILABS_SISDK_RTCC if $(dt_nodelabel_enabled,rtcc0)
 	help
 	  Set if the Sleeptimer HAL module is used.
 
