--- a/soc/silabs/silabs_s2/xg23/Kconfig
+++ b/soc/silabs/silabs_s2/xg23/Kconfig
@@ -13,10 +13,9 @@ config SOC_SILABS_XG23
 	select HAS_PM
 	select HAS_SWO
 	select SILABS_SISDK_CLOCK_MANAGER
+	select SILABS_SISDK_CORE
 	select SILABS_SISDK_DEVICE_INIT
-	select SOC_GECKO_CORE
-	select SOC_GECKO_EMU
-	select SOC_GECKO_GPIO
+	select SILABS_SISDK_GPIO
 
 config SOC_SERIES_EFR32ZG23
 	select SOC_GECKO_HAS_RADIO
