--- a/soc/silabs/silabs_s2/xg24/Kconfig
+++ b/soc/silabs/silabs_s2/xg24/Kconfig
@@ -15,9 +15,9 @@ config SOC_SILABS_XG24
 	select HAS_PM
 	select HAS_SWO
 	select SILABS_SISDK_CLOCK_MANAGER
+	select SILABS_SISDK_CORE
 	select SILABS_SISDK_DEVICE_INIT
-	select SOC_GECKO_EMU
-	select SOC_GECKO_GPIO
+	select SILABS_SISDK_GPIO
 
 config SOC_SERIES_EFR32MG24
 	select SOC_GECKO_HAS_RADIO
