--- a/soc/silabs/silabs_s2/xg27/Kconfig
+++ b/soc/silabs/silabs_s2/xg27/Kconfig
@@ -12,10 +12,9 @@ config SOC_SILABS_XG27
 	select HAS_PM
 	select HAS_SWO
 	select SILABS_SISDK_CLOCK_MANAGER
+	select SILABS_SISDK_CORE
 	select SILABS_SISDK_DEVICE_INIT
-	select SOC_GECKO_CORE
-	select SOC_GECKO_EMU
-	select SOC_GECKO_GPIO
+	select SILABS_SISDK_GPIO
 
 config SOC_SERIES_EFR32BG27
 	select SOC_GECKO_HAS_RADIO
