--- a/drivers/flash/Kconfig
+++ b/drivers/flash/Kconfig
@@ -174,6 +174,7 @@ source "drivers/flash/Kconfig.cadence_nand"
 source "drivers/flash/Kconfig.cadence_qspi_nor"
 source "drivers/flash/Kconfig.cc13xx_cc26xx"
 source "drivers/flash/Kconfig.cc23x0"
+source "drivers/flash/Kconfig.eeprom"
 source "drivers/flash/Kconfig.esp32"
 source "drivers/flash/Kconfig.gd32"
 source "drivers/flash/Kconfig.gecko"
