soc: silabs: Move Kconfig symbol for sleeptimer to HAL
Kconfig symbols for selecting HAL content should be part of the
HAL module integration, not defined in the SoC tree. Define the
sleeptimer symbol for WiSeConnect and SiSDK since both use it.

In the future, WiSeConnect should include the SiSDK configuration
and reuse it instead of redefining everything itself. This is a
larger scale refactor that this commit doesn't start tackling.

Signed-off-by: Aksel Skauge Mellbye <aksel.mellbye@silabs.com>

--- a/modules/hal_silabs/simplicity_sdk/Kconfig
+++ b/modules/hal_silabs/simplicity_sdk/Kconfig
@@ -26,6 +26,15 @@ config SILABS_SISDK_TIMER
 config SILABS_SISDK_VDAC
 	bool "Peripheral HAL for VDAC"
 
+config SILABS_SISDK_SLEEPTIMER
+	bool
+	select SOC_GECKO_PRS
+	select SOC_GECKO_RTCC if $(dt_nodelabel_enabled,rtcc0)
+	help
+	  Set if the Sleeptimer HAL module is used.
+
+# Radio
+
 config SILABS_SISDK_RAIL_PA_CURVE_HEADER
 	string "RAIL PA custom curve header file"
 	default "pa_curves_efr32.h"
