soc: silabs: Select PM implementation per family directly
The indirection through a backend symbol for PM implementation
isn't necessary. Define symbol for PM HAL in HAL Kconfig, and
leverage it at SoC level.

Signed-off-by: Aksel Skauge Mellbye <aksel.mellbye@silabs.com>

--- a/modules/hal_silabs/simplicity_sdk/Kconfig
+++ b/modules/hal_silabs/simplicity_sdk/Kconfig
@@ -26,6 +26,25 @@ config SILABS_SISDK_TIMER
 config SILABS_SISDK_VDAC
 	bool "Peripheral HAL for VDAC"
 
+# Utilities
+
+config SILABS_SISDK_SLIST
+	bool
+
+# Services
+
+config SILABS_SISDK_HFXO_MANAGER
+	bool "HFXO Manager service"
+	help
+	  Set if the HFXO Manager HAL module is used.
+
+config SILABS_SISDK_POWER_MANAGER
+	bool "Power Manager service"
+	select SOC_GECKO_EMU
+	select SILABS_SISDK_SLIST
+	help
+	  Set if the Power Manager HAL module is used.
+
 config SILABS_SISDK_SLEEPTIMER
 	bool
 	select SOC_GECKO_PRS
