--- a/soc/silabs/silabs_s2/xg21/Kconfig
+++ b/soc/silabs/silabs_s2/xg21/Kconfig
@@ -10,8 +10,8 @@ config SOC_SILABS_XG21
 	select CPU_HAS_FPU
 	select HAS_PM
 	select HAS_SWO
-	select SOC_GECKO_CMU
-	select SOC_GECKO_DEV_INIT
+	select SILABS_SISDK_CLOCK_MANAGER
+	select SILABS_SISDK_DEVICE_INIT
 	select SOC_GECKO_EMU
 	select SOC_GECKO_GPIO
 	select SOC_GECKO_SE
