--- a/soc/silabs/silabs_s2/xg22/Kconfig
+++ b/soc/silabs/silabs_s2/xg22/Kconfig
@@ -11,9 +11,9 @@ config SOC_SILABS_XG22
 	select CPU_HAS_FPU
 	select HAS_PM
 	select HAS_SWO
-	select SOC_GECKO_CMU
+	select SILABS_SISDK_CLOCK_MANAGER
+	select SILABS_SISDK_DEVICE_INIT
 	select SOC_GECKO_CORE
-	select SOC_GECKO_DEV_INIT
 	select SOC_GECKO_EMU
 	select SOC_GECKO_GPIO
 	select SOC_GECKO_SE
