drivers: sdhc: Infineon PDL based SDIO driver
Initial commit for PDL based SDIO support on PSOCE84

Signed-off-by: Sreeram Tatapudi <sreeram.praveen@infineon.com>

--- a/boards/infineon/kit_pse84_eval/kit_pse84_eval_common-pinctrl.dtsi
+++ b/boards/infineon/kit_pse84_eval/kit_pse84_eval_common-pinctrl.dtsi
@@ -13,3 +13,33 @@
 &p6_5_scb2_uart_rx {
 	input-enable;
 };
+
+&p21_0_sdhc0_card_cmd{
+	drive-push-pull;
+	input-enable;
+};
+
+&p12_0_sdhc0_clk_card{
+	drive-push-pull;
+	input-enable;
+};
+
+&p12_1_sdhc0_card_dat_3to0{
+	drive-push-pull;
+	input-enable;
+};
+
+&p12_2_sdhc0_card_dat_3to0{
+	drive-push-pull;
+	input-enable;
+};
+
+&p12_4_sdhc0_card_dat_3to0{
+	drive-push-pull;
+	input-enable;
+};
+
+&p12_5_sdhc0_card_dat_3to0{
+	drive-push-pull;
+	input-enable;
+};
