--- a/boards/infineon/kit_pse84_eval/kit_pse84_eval_common.dtsi
+++ b/boards/infineon/kit_pse84_eval/kit_pse84_eval_common.dtsi
@@ -66,6 +66,18 @@ uart2: &scb2 {
 	status = "okay";
 };
 
+&gpio_prt11 {
+	status = "okay";
+};
+
+&gpio_prt13 {
+	status = "okay";
+};
+
+&gpio_prt14 {
+	status = "okay";
+};
+
 &gpio_prt16 {
 	status = "okay";
 };
