drivers: sensor: ti: Add TI temp sensor HDC302x to tests
The HDC302x sensor is added to the i2c tests

Signed-off-by: COUSSEMENT Stijn <stijn.coussement@psicontrol.com>

--- a/tests/drivers/build_all/sensor/i2c.dtsi
+++ b/tests/drivers/build_all/sensor/i2c.dtsi
@@ -1422,3 +1422,9 @@ test_i2c_als31300: als31300@bd {
 	compatible = "allegro,als31300";
 	reg = <0xbd>;
 };
+
+test_i2c_hdc302x: hdc302x@be {
+	compatible = "ti,hdc302x";
+	reg = <0xbe>;
+	int-gpios = <&test_gpio 0 0>;
+};
